tools/rum/rum-slicer.css
/* ... */
.icon::after,
.icon::before {
  content: "";
  display: block;
  box-sizing: border-box;
  position: absolute;
  border-radius: 2px;
  width: 10px;
  left: 2px;
}

/* the copy icon looks like two rectangles, overlaid */
.clipboard::before {
  content: "";
  display: block;
  box-sizing: border-box;
  position: absolute;
  border-radius: 2px;
  width: 12px;
  height: 12px;
  border: 2px solid;
  top: 8px;
  left: 8px;
  z-index: 1;
}

.clipboard::after {
  content: "";
  display: block;
  box-sizing: border-box;
  position: absolute;
  border-radius: 2px;
  width: 12px;
  height: 12px;
  border: 2px solid;
  border-bottom: 0;
  border-right: 0;
  top: 5px;
  left: 5px;
  z-index: 1;
}

/* toasts */

.toast {
  z-index: var(--nav-z-index);
  position: fixed;
  display: block;
  width: fit-content;
  padding: 8px 32px;
  border-radius: 16px;
  max-width: 80%;
  background-color: #444;
  color: white;
  top: 32px;
  left: 0;
  right: 0;
  margin: auto;
  transition: all 0.3s linear;
  margin-top: 0;
}

.toast[aria-hidden="true"] {
  visibility: hidden;
  opacity: 0;
  margin-top: -20px;
}

facet-sidebar[aria-disabled="true"] fieldset input[type="checkbox"] {
  display: none;
}

facet-sidebar[aria-disabled="true"] fieldset legend span {
  display: none;
}

facet-sidebar[aria-disabled="true"] fieldset > div:hover {
  background-color: transparent;
}

facet-sidebar[aria-disabled="true"] div.quick-filter {
  display: none;
}

@media (min-width: 600px) {
  main .title url-selector input {
    font-size: var(--type-heading-l-size);
  }
}

@media (min-width: 900px) {
  main .title {
    flex-wrap: nowrap;
  }

  main .title > * {
    flex: 3 0;
  }

  main .title daterange-picker {
    flex: unset;
    order: unset;
  }

  main .title url-selector input {
    font-size: var(--type-heading-xl-size);
  }

  main .title url-selector img {
    height: 32px;
  }

  main .key-metrics ul > * h2,
  main .key-metrics ul > * button {
    font-size: 14px;
  }

  main .key-metrics ul > * h2::before {
    width: 14px;
    height: 14px;
    border-radius: 14px;
  }

  main .key-metrics ul > * p {
    font-size: 30px;
    margin: 16px 0;
  }

  main .key-metrics ul {
    grid-gap: 16px;
  }

  main .key-metrics ul > * {
    border-radius: 16px;
    padding: 8px 16px;
  }

  #facets fieldset div {
    grid-template-areas: "check lab cwv";
    grid-template-columns: 20px 1fr 350px;
  }

  #facets ul.cwv {
    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
    grid-gap: 8px;
    margin: 8px 4px;
  }

  fieldset li,
  vitals-facet label {
    border-radius: 16px;
    padding: 4px 16px;
    font-size: 18px;
  }
}

/* split mode */
@media (min-width: 1600px) {
  #deepmain {
    display: flex;
    gap: 16px;
    height: calc(100vh - var(--nav-height) - 32px);
  }

  main .key-metrics ul {
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  }

  #deepmain > div,
  #deepmain > facet-sidebar {
    width: 50%;
  }

  main div.output {
    position: fixed;
    width: 50vw;
  }

  facet-sidebar {
    margin-left: calc(50vw + 16px);
  }

  body.appear {
    max-width: 2400px;
    display: block;
    padding-top: 0;
  }
}

@media (min-width: 2000px) {
  main .key-metrics ul {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  }
}

footer.footer-wrapper.appear {
  display: none;
}

img.facet-thumbnail {
  aspect-ratio: 1/1;
  object-fit: contain;
}

